added section foreign

--- a/app/children-offline.html
+++ b/app/children-offline.html
@@ -547,6 +547,43 @@
     </section>
     <!-- / RESULT -->
 
+    <!-- FOREIGN-LANGUAGES -->
+    <div class="foreign section-outer foreign--offline">
+        <div class="section-inner">
+            <div class="foreign-wrapper">
+                <div class="foreign-photo">
+                    <div class="foreign-photo__inner" style="background-image: url(images/default-images/img-bg-6.svg);">
+                        <img class="foreign-photo__inner-img" src="images/uploads/uploads-10.png" alt="">
+                    </div>
+                </div>
+                <div class="foreign-info">
+                    <div class="foreign-info__title title"><span>Что такое иностранные языки для нас?</span></div>
+                    <div class="foreign-info__items">
+                        <div class="foreign-info__item foreign-info__item--green">
+                            <div class="foreign-info__item-text">Навыки</div>
+                        </div>
+                        <div class="foreign-info__item foreign-info__item--red">
+                            <div class="foreign-info__item-text">Культурная среда</div>
+                        </div>
+                        <div class="foreign-info__item foreign-info__item--orange">
+                            <div class="foreign-info__item-text">Жизненные ценности</div>
+                        </div>
+                        <div class="foreign-info__item foreign-info__item--orange">
+                            <div class="foreign-info__item-text">Знания</div>
+                        </div>
+                        <div class="foreign-info__item foreign-info__item--yellow">
+                            <div class="foreign-info__item-text">Языковая среда</div>
+                        </div>
+                        <div class="foreign-info__item foreign-info__item--blue">
+                            <div class="foreign-info__item-text">Дружественная атмосфера</div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- / FOREIGN-LANGUAGES -->
+
     <!-- FOOTER -->
     <footer class="footer">
         <div class="section-inner">
