--- a/app/children-offline.html
+++ b/app/children-offline.html
@@ -584,6 +584,159 @@
     </div>
     <!-- / FOREIGN-LANGUAGES -->
 
+    <!-- TRAINING PACKAGES -->
+    <!-- <div class="packages section-outer">
+        <div class="section-inner">
+            <div class="packages-wrapper">
+                <div class="packages-top">
+                    <div class="packages-title title"><span>пакеты обучения</span></div>
+                </div>
+
+                <div class="packages-tab">
+
+                    <div class="packages-tab__wrapper">
+
+                        <div class="packages-tab__content tab-content">
+                            <div class="tab-wrapper">
+                                <div class="tab-items">
+                                    <span class="tab-list tab--active" data-tab="#tab_1">Взрослые</span>
+                                    <span class="tab-list" data-tab="#tab_2">Дети и подростки</span>
+                                </div>
+                                <div class="popup-tab__content">
+                                    <div class="tab-item tab-content--active" id="tab_1">
+                                       
+                                    </div>
+                                    <div class="tab-item" id="tab_2">
+
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
+                    </div>
+
+                </div>
+
+            </div>
+        </div>
+    </div> -->
+    <!-- / TRAINING PACKAGES -->
+
+    <!-- TRIAL-LESSON -->
+    <section class="trial-lesson section-outer">
+        <div class="section-inner popup--trial">
+            <div class="popup-wrapper">
+                <div class="popup-inner">
+                    <div class="tab-content">
+                        <div class="popup-title tab-title">Записаться на пробное занятие</div>
+                        <div class="popup-tab__wrapper tab-wrapper">
+                            <div class="tab-items">
+                                <span class="tab-list tab--active" data-tab="#tab_1">Взрослые</span>
+                                <span class="tab-list" data-tab="#tab_2">Дети и подростки</span>
+                            </div>
+                            <div class="popup-tab__content">
+                                <div class="tab-item tab-content--active" id="tab_1">
+                                    <div class="popup__item-info">
+                                        <form class="popup__item-form">
+                                            <div class="popup__select">
+                                                <div class="select-wrapper">
+                                                    <button type="button" class="select-btn">Английский язык</button>
+                                                    <ul class="select-list">
+                                                        <li class="select-list__item" data-value="english">Английский язык
+                                                        </li>
+                                                        <li class="select-list__item" data-value="france">Французский язык
+                                                        </li>
+                                                        <li class="select-list__item" data-value="germany">Немецкий язык
+                                                        </li>
+                                                        <li class="select-list__item" data-value="spain">Испанский язык
+                                                        </li>
+                                                    </ul>
+                                                    <input type="text" name="select-category" class="select-hidden">
+                                                </div>
+                                            </div>
+                                            <div class="popup__item-chose">
+                                                <label for="online-old" class="popup__item-radio-online popup__item-radio-box">
+                                                        <input type="radio" id="online-old" class="popup__item-radio"
+                                                            name="popup__item-radio" checked>
+                                                        <span class="popup__item-radio-fake"></span>
+                                                        <span class="popup__item-radio-text">Онлайн-занятия</span>
+                                                    </label>
+                                                <label for="offline-old" class="popup__item-radio-offline popup__item-radio-box">
+                                                        <input type="radio" id="offline-old" class="popup__item-radio"
+                                                            name="popup__item-radio">
+                                                        <span class="popup__item-radio-fake"></span>
+                                                        <span class="popup__item-radio-text">Занятия в клубе</span>
+                                                    </label>
+                                            </div>
+                                            <div class="popup__item-personal-date">
+                                                <div class="popup__item-personal-date-item">
+                                                    <input type="text" class="popup__item-personal-name popup-input" placeholder="Имя" name="name" required>
+                                                    <input type="tel" class="popup__item-personal-phone popup-input" placeholder="Телефон" name="phone" required>
+                                                </div>
+                                                <div class="popup__item-personal-date-item">
+                                                    <input type="email" class="popup__item-personal-email popup-input" placeholder="Почта" name="email" required>
+                                                </div>
+                                            </div>
+                                            <button class="popup__item-btn btn" type="submit">Отправить</button>
+                                        </form>
+                                    </div>
+                                </div>
+                                <div class="tab-item" id="tab_2">
+                                    <form class="popup__item-form">
+                                        <div class="popup__select">
+                                            <div class="select-wrapper">
+                                                <button type="button" class="select-btn">Английский язык</button>
+                                                <ul class="select-list">
+                                                    <li class="select-list__item" data-value="english">Английский язык
+                                                    </li>
+                                                    <li class="select-list__item" data-value="france">Французский язык
+                                                    </li>
+                                                    <li class="select-list__item" data-value="germany">Немецкий язык
+                                                    </li>
+                                                    <li class="select-list__item" data-value="spain">Испанский язык</li>
+                                                </ul>
+                                                <input type="text" name="select-category" value="" class="select-hidden">
+                                            </div>
+                                        </div>
+                                        <div class="popup__item-chose">
+                                            <label for="online-child" class="popup__item-radio-online popup__item-radio-box">
+                                                    <input type="radio" id="online-child" class="popup__item-radio"
+                                                        name="popup__item-radio" checked>
+                                                    <span class="popup__item-radio-fake"></span>
+                                                    <span class="popup__item-radio-text">Онлайн-занятия</span>
+                                                </label>
+                                            <label for="offline-child" class="popup__item-radio-offline popup__item-radio-box">
+                                                    <input type="radio" id="offline-child" class="popup__item-radio"
+                                                        name="popup__item-radio">
+                                                    <span class="popup__item-radio-fake"></span>
+                                                    <span class="popup__item-radio-text">Занятия в клубе</span>
+                                                </label>
+                                        </div>
+                                        <div class="popup__item-personal-date">
+                                            <div class="popup__item-personal-date-item">
+                                                <input type="text" class="popup__item-personal-name popup-input" placeholder="Имя родителя" name="name">
+                                                <input type="tel" class="popup__item-personal-phone popup-input" placeholder="Телефон" name="phone">
+                                            </div>
+                                            <div class="popup__item-personal-date-item">
+                                                <input type="text" class="popup__item-personal-name popup-input" placeholder="Имя ребёнка" name="name">
+                                                <input type="number" class="popup__item-personal-age popup-input" placeholder="Возраст ребёнка" name="age" max="100" min="1">
+                                            </div>
+                                            <div class="popup__item-personal-date-item">
+                                                <input type="email" class="popup__item-personal-email popup-input" placeholder="Почта" name="email">
+                                            </div>
+                                        </div>
+                                        <button class="popup__item-btn btn" type="submit">Отправить</button>
+                                    </form>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- / TRIAL-LESSON -->
+
     <!-- FOOTER -->
     <footer class="footer">
         <div class="section-inner">
