created new page, and added section imagine

--- a/app/children-offline.html
+++ b/app/children-offline.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="SPEAKY SCHOOL">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>SPEAKY SCHOOL</title>
+    <title>Обучение детей оффлайн</title>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/libs.min.css">
     <link rel="stylesheet" href="css/style.min.css">
@@ -372,7 +372,7 @@
     <!-- / HEADER -->
 
     <!-- INTRO -->
-    <section class="intro section-outer">
+    <section class="intro section-outer intro--offline">
         <div class="section-inner">
             <div class="intro__content">
                 <div class="intro-info">
