added section shall

--- a/app/adult-education.html
+++ b/app/adult-education.html
@@ -470,6 +470,36 @@
     </section>
     <!-- / IMAGiNE-->
 
+    <!-- WHAT WE WILL DO -->
+    <section class="shall section-outer">
+        <div class="section-inner">
+            <div class="shall-wrapper">
+                <div class="shall-top">
+                    <div class="shall-title title"><span>Что будем делать мы? </span></div>
+                </div>
+                <div class="shall-items">
+                    <div class="shall-item">
+                        <div class="shall-item__number shall-item__number--green">1</div>
+                        <div class="shall-item__text">сформулируем конкретную цель</div>
+                    </div>
+                    <div class="shall-item">
+                        <div class="shall-item__number shall-item__number--yellow">2</div>
+                        <div class="shall-item__text">обозначим срок достижения цели</div>
+                    </div>
+                    <div class="shall-item">
+                        <div class="shall-item__number shall-item__number--orange">3</div>
+                        <div class="shall-item__text">назначим даты чекпоинтов</div>
+                    </div>
+                    <div class="shall-item">
+                        <div class="shall-item__number shall-item__number--red">4</div>
+                        <div class="shall-item__text">начнём постепенно двигаться к цели</div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- / WHAT WE WILL DO -->
+
     <!-- FOOTER -->
     <footer class="footer">
         <div class="section-inner">
