added section intelligibly

--- a/app/adult-education.html
+++ b/app/adult-education.html
@@ -376,11 +376,12 @@
         <div class="section-inner">
             <div class="intro__content">
                 <div class="intro-info">
-                    <h1 class="intro-info__title">ШКОЛА ИНОСТРАННЫХ ЯЗЫКОВ ДЛЯ ВСЕЙ СЕМЬИ</h1>
+                    <h1 class="intro-info__title">ЭФФЕКТИВНОЕ ИЗУЧЕНИЕ ЯЗЫКОВ</h1>
+                    <p class="intro-info__text">Прокачайте язык вместе с нами под любые цели</p>
                     <a href="#popup-trial" class="btn intro-info-btn js-modal-open">Пробное занятие</a>
                 </div>
                 <div class="intro-images">
-                    <img src="images/default-images/illustration-1.png" alt="">
+                    <img src="images/default-images/illustration-14.png" alt="">
                 </div>
             </div>
         </div>
@@ -499,6 +500,29 @@
         </div>
     </section>
     <!-- / WHAT WE WILL DO -->
+
+    <!-- INTELLIGIBLY -->
+    <section class="intelligibly section-outer">
+        <div class="section-inner">
+            <div class="intelligibly-wrapper">
+                <div class="intelligibly-content">
+                    <div class="intelligibly-info">
+                        <div class="intelligibly-info__title title"><span>Все задачи выполнимы и интересны, когда они ясны</span></div>
+                        <div class="intelligibly-info__text text">А может быть язык вам нужен для путешествий? Для переезда в другую страну? Или у вас профессиональные цели и язык вам нужен для повышения? </div>
+                        <div class="intelligibly-info__button">
+                            <a class="intelligibly-info__btn btn js-modal-open" href="#popup-trial">Пробное занятие</a>
+                        </div>
+                    </div>
+                    <div class="intelligibly-photo">
+                        <div class="intelligibly-photo__inner" style="background-image: url(images/default-images/img-bg-8.svg);">
+                            <img class="intelligibly-photo__inner-img" src="images/uploads/uploads-15.png" alt="">
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- / INTELLIGIBLY -->
 
     <!-- FOOTER -->
     <footer class="footer">
