added adaptive for section Why-speak

--- a/app/index.html
+++ b/app/index.html
@@ -500,7 +500,7 @@
     <!-- / WHY-SPEAKY -->
 
     <!-- TRIAL-LESSON -->
-    <section class="trial-lesson section-outer">
+    <!-- <section class="trial-lesson section-outer">
         <div class="section-inner popup--trial">
             <div class="popup-wrapper">
                 <div class="popup-inner">
@@ -611,11 +611,11 @@
                 </div>
             </div>
         </div>
-    </section>
+    </section> -->
     <!-- / TRIAL-LESSON -->
 
     <!-- CHILDREN distribution -->
-    <section class="distribution section-outer">
+    <!-- <section class="distribution section-outer">
         <div class="section-inner">
             <div class="distribution__content distribution__content--children">
                 <div class="distribution__content-photo">
@@ -653,11 +653,11 @@
                 </div>
             </div>
         </div>
-    </section>
+    </section> -->
     <!-- / CHILDREN distribution -->
 
     <!-- ADULT distribution -->
-    <section class="distribution section-outer">
+    <!-- <section class="distribution section-outer">
         <div class="section-inner">
             <div class="distribution__content distribution__content--adult">
                 <div class="distribution__content-photo">
@@ -693,11 +693,11 @@
                 </div>
             </div>
         </div>
-    </section>
+    </section> -->
     <!-- / ADULT distribution -->
 
     <!-- SMART EAY OF LEARNING -->
-    <section class="smart section-outer">
+    <!-- <section class="smart section-outer">
         <div class="section-inner">
             <div class="smart__top">
                 <div class="smart__title title"><span>Мы используем SMART-подход в обучении</span></div>
@@ -783,11 +783,11 @@
                 </div>
             </div>
         </div>
-    </section>
+    </section> -->
     <!-- /SMART EAY OF LEARNING -->
 
     <!-- TRIAL-LESSON -->
-    <section class="trial-lesson section-outer">
+    <!-- <section class="trial-lesson section-outer">
         <div class="section-inner popup--trial">
             <div class="popup-wrapper">
                 <div class="popup-inner">
@@ -898,11 +898,11 @@
                 </div>
             </div>
         </div>
-    </section>
+    </section> -->
     <!-- / TRIAL-LESSON -->
 
     <!-- HISTORY -->
-    <div class="history section-outer">
+    <!-- <div class="history section-outer">
         <div class="section-inner history-inner">
             <div class="history__wrapper">
                 <div class="history__top">
@@ -995,7 +995,7 @@
                 </div>
             </div>
         </div>
-    </div>
+    </div> -->
     <!-- / HISTORY -->
 
     <!-- FOOTER -->
