--- a/app/index.html
+++ b/app/index.html
@@ -401,6 +401,7 @@
                         <h3 class="assignment-item__text"><span>обучение детей</span></h3>
                     </div>
                 </div>
+
             </div>
         </div>
     </section>
@@ -500,7 +501,7 @@
     <!-- / WHY-SPEAKY -->
 
     <!-- TRIAL-LESSON -->
-    <!-- <section class="trial-lesson section-outer">
+    <section class="trial-lesson section-outer">
         <div class="section-inner popup--trial">
             <div class="popup-wrapper">
                 <div class="popup-inner">
@@ -611,11 +612,11 @@
                 </div>
             </div>
         </div>
-    </section> -->
+    </section>
     <!-- / TRIAL-LESSON -->
 
     <!-- CHILDREN distribution -->
-    <!-- <section class="distribution section-outer">
+    <section class="distribution section-outer">
         <div class="section-inner">
             <div class="distribution__content distribution__content--children">
                 <div class="distribution__content-photo">
@@ -653,11 +654,11 @@
                 </div>
             </div>
         </div>
-    </section> -->
+    </section>
     <!-- / CHILDREN distribution -->
 
     <!-- ADULT distribution -->
-    <!-- <section class="distribution section-outer">
+    <section class="distribution section-outer">
         <div class="section-inner">
             <div class="distribution__content distribution__content--adult">
                 <div class="distribution__content-photo">
@@ -693,11 +694,11 @@
                 </div>
             </div>
         </div>
-    </section> -->
+    </section>
     <!-- / ADULT distribution -->
 
     <!-- SMART EAY OF LEARNING -->
-    <!-- <section class="smart section-outer">
+    <section class="smart section-outer">
         <div class="section-inner">
             <div class="smart__top">
                 <div class="smart__title title"><span>Мы используем SMART-подход в обучении</span></div>
@@ -783,11 +784,11 @@
                 </div>
             </div>
         </div>
-    </section> -->
+    </section>
     <!-- /SMART EAY OF LEARNING -->
 
     <!-- TRIAL-LESSON -->
-    <!-- <section class="trial-lesson section-outer">
+    <section class="trial-lesson section-outer">
         <div class="section-inner popup--trial">
             <div class="popup-wrapper">
                 <div class="popup-inner">
@@ -898,7 +899,7 @@
                 </div>
             </div>
         </div>
-    </section> -->
+    </section>
     <!-- / TRIAL-LESSON -->
 
     <!-- HISTORY -->
