adaptive section history

--- a/app/index.html
+++ b/app/index.html
@@ -903,7 +903,7 @@
     <!-- / TRIAL-LESSON -->
 
     <!-- HISTORY -->
-    <!-- <div class="history section-outer">
+    <div class="history section-outer">
         <div class="section-inner history-inner">
             <div class="history__wrapper">
                 <div class="history__top">
@@ -996,7 +996,7 @@
                 </div>
             </div>
         </div>
-    </div> -->
+    </div>
     <!-- / HISTORY -->
 
     <!-- FOOTER -->
