added js for section packages

--- a/app/adult-education.html
+++ b/app/adult-education.html
@@ -524,6 +524,97 @@
     </section>
     <!-- / INTELLIGIBLY -->
 
+    <section class="packages section-outer">
+        <div class="section-inner">
+            <div class="packages-wrapper">
+                <div class="packages__top">
+                    <div class="packages__top-title title"><span>пакеты обучения</span></div>
+                    <div class="packages__top-text">Выбирайте удобный формат встреч </div>
+                </div>
+                <div class="packages__content">
+
+                    <div class="packages__content-item packages__content-item--active">
+                        <div class="packages__content-item__box">
+                            <div class="packages__content-item-circle"></div>
+                            <div class="packages__content-item-title">Вид обучения</div>
+                        </div>
+                        <div class="packages__content-item-dropdown">
+                            <div class="packages__content-item-dropdown-box">
+                                <form>
+                                    <label class="packages__lesson-radio-label">
+                                        <input type="radio" id="packages__lesson-offline" class="packages__lesson-radio" name="packages-lesson" value="offline">
+                                        <span class="packages__lesson-fake"></span>
+                                        <span class="packages__lesson-text">Офлайн-занятия</span>
+                                    </label>
+                                    <label class="packages__lesson-radio-label">
+                                        <input type="radio" id="packages__lesson-online" class="packages__lesson-radio" name="packages-lesson" value="online">
+                                        <span class="packages__lesson-fake"></span>
+                                        <span class="packages__lesson-text">Онлайн-занятия</span>
+                                    </label>
+                                </form>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="packages__content-item packages__content-item--active">
+                        <div class="packages__content-item__box">
+                            <div class="packages__content-item-circle"></div>
+                            <div class="packages__content-item-title">Вид занятия</div>
+                        </div>
+                        <div class="packages__content-item-dropdown">
+                            <div class="packages__content-item-dropdown-box">
+                                <form>
+                                    <label class="packages__lesson-radio-label">
+                                        <input type="radio" id="packages__lesson-individual" class="packages__lesson-radio" name="packages-lesson" value="individual">
+                                        <span class="packages__lesson-fake"></span>
+                                        <span class="packages__lesson-text">Индивидуальные уроки</span>
+                                    </label>
+                                    <label class="packages__lesson-radio-label ">
+                                        <input type="radio" id="packages__lesson-group" class="packages__lesson-radio" name="packages-lesson" value="group">
+                                        <span class="packages__lesson-fake"></span>
+                                        <span class="packages__lesson-text">Групповые уроки</span>
+                                    </label>
+                                    <label class="packages__lesson-radio-label">
+                                        <input type="radio" id="packages__lesson-spoken" class="packages__lesson-radio" name="packages-lesson" value="spoken">
+                                        <span class="packages__lesson-fake"></span>
+                                        <span class="packages__lesson-text">Разговорный клуб</span>
+                                    </label>
+                                </form>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="packages__content-item packages__content-item--active">
+                        <div class="packages__content-item__box">
+                            <div class="packages__content-item-circle"></div>
+                            <div class="packages__content-item-title">Длительность</div>
+                        </div>
+                        <div class="packages__content-item-dropdown">
+                            <div class="packages__content-item-dropdown-box">
+                                <div class="packages__content-item-duration"></div>
+                                <div class="packages__content-item-time">
+                                    <form>
+                                        <label class="packages__lesson-radio-label">
+                                            <input type="radio" id="packages__lesson-thirty-minutes" class="packages__lesson-radio" name="packages-lesson" value="thirty">
+                                            <span class="packages__lesson-fake"></span>
+                                            <span class="packages__lesson-text">30 минут</span>
+                                        </label>
+                                        <label class="packages__lesson-radio-label">
+                                            <input type="radio" id="packages__lesson-sixty-minutes" class="packages__lesson-radio" name="packages-lesson" value="sixty">
+                                            <span class="packages__lesson-fake"></span>
+                                            <span class="packages__lesson-text">60 минут</span>
+                                        </label>
+                                    </form>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+        </div>
+    </section>
+
     <!-- TRIAL-LESSON -->
     <section class="trial-lesson section-outer">
         <div class="section-inner popup--trial">
@@ -557,13 +648,13 @@
                                                 </div>
                                             </div>
                                             <div class="popup__item-chose">
-                                                <label for="online-old" class="popup__item-radio-online popup__item-radio-box">
+                                                <label class="popup__item-radio-online popup__item-radio-box">
                                                         <input type="radio" id="online-old" class="popup__item-radio"
                                                             name="popup__item-radio" checked>
                                                         <span class="popup__item-radio-fake"></span>
                                                         <span class="popup__item-radio-text">Онлайн-занятия</span>
                                                     </label>
-                                                <label for="offline-old" class="popup__item-radio-offline popup__item-radio-box">
+                                                <label class="popup__item-radio-offline popup__item-radio-box">
                                                         <input type="radio" id="offline-old" class="popup__item-radio"
                                                             name="popup__item-radio">
                                                         <span class="popup__item-radio-fake"></span>
