added new card for section 'packages', and refactoring js code

--- a/app/adult-education.html
+++ b/app/adult-education.html
@@ -533,7 +533,7 @@
                 </div>
                 <div class="packages__content">
 
-                    <div class="packages__content-item packages__content-item--active">
+                    <div class="packages__content-item">
                         <div class="packages__content-item__box">
                             <div class="packages__content-item-circle"></div>
                             <div class="packages__content-item-title">Вид обучения</div>
@@ -542,12 +542,12 @@
                             <div class="packages__content-item-dropdown-box">
                                 <form>
                                     <label class="packages__lesson-radio-label">
-                                        <input type="radio" id="packages__lesson-offline" class="packages__lesson-radio" name="packages-lesson" value="offline">
+                                        <input type="radio" id="lesson-offline" class="packages__lesson-radio" name="packages-lesson" value="offline">
                                         <span class="packages__lesson-fake"></span>
                                         <span class="packages__lesson-text">Офлайн-занятия</span>
                                     </label>
                                     <label class="packages__lesson-radio-label">
-                                        <input type="radio" id="packages__lesson-online" class="packages__lesson-radio" name="packages-lesson" value="online">
+                                        <input type="radio" id="lesson-online" class="packages__lesson-radio" name="packages-lesson" value="online">
                                         <span class="packages__lesson-fake"></span>
                                         <span class="packages__lesson-text">Онлайн-занятия</span>
                                     </label>
@@ -556,7 +556,7 @@
                         </div>
                     </div>
 
-                    <div class="packages__content-item packages__content-item--active">
+                    <div class="packages__content-item">
                         <div class="packages__content-item__box">
                             <div class="packages__content-item-circle"></div>
                             <div class="packages__content-item-title">Вид занятия</div>
@@ -565,17 +565,17 @@
                             <div class="packages__content-item-dropdown-box">
                                 <form>
                                     <label class="packages__lesson-radio-label">
-                                        <input type="radio" id="packages__lesson-individual" class="packages__lesson-radio" name="packages-lesson" value="individual">
+                                        <input type="radio" id="lesson-individual" class="packages__lesson-radio" name="packages-lesson" value="individual">
                                         <span class="packages__lesson-fake"></span>
                                         <span class="packages__lesson-text">Индивидуальные уроки</span>
                                     </label>
                                     <label class="packages__lesson-radio-label ">
-                                        <input type="radio" id="packages__lesson-group" class="packages__lesson-radio" name="packages-lesson" value="group">
+                                        <input type="radio" id="lesson-group" class="packages__lesson-radio" name="packages-lesson" value="group">
                                         <span class="packages__lesson-fake"></span>
                                         <span class="packages__lesson-text">Групповые уроки</span>
                                     </label>
                                     <label class="packages__lesson-radio-label">
-                                        <input type="radio" id="packages__lesson-spoken" class="packages__lesson-radio" name="packages-lesson" value="spoken">
+                                        <input type="radio" id="lesson-spoken" class="packages__lesson-radio" name="packages-lesson" value="spoken">
                                         <span class="packages__lesson-fake"></span>
                                         <span class="packages__lesson-text">Разговорный клуб</span>
                                     </label>
@@ -584,7 +584,7 @@
                         </div>
                     </div>
 
-                    <div class="packages__content-item packages__content-item--active">
+                    <div class="packages__content-item">
                         <div class="packages__content-item__box">
                             <div class="packages__content-item-circle"></div>
                             <div class="packages__content-item-title">Длительность</div>
@@ -595,12 +595,12 @@
                                 <div class="packages__content-item-time">
                                     <form>
                                         <label class="packages__lesson-radio-label">
-                                            <input type="radio" id="packages__lesson-thirty-minutes" class="packages__lesson-radio" name="packages-lesson" value="thirty">
+                                            <input type="radio" id="lesson-thirty-minutes" class="packages__lesson-radio" name="packages-lesson" value="thirty">
                                             <span class="packages__lesson-fake"></span>
                                             <span class="packages__lesson-text">30 минут</span>
                                         </label>
                                         <label class="packages__lesson-radio-label">
-                                            <input type="radio" id="packages__lesson-sixty-minutes" class="packages__lesson-radio" name="packages-lesson" value="sixty">
+                                            <input type="radio" id="lesson-sixty-minutes" class="packages__lesson-radio" name="packages-lesson" value="sixty">
                                             <span class="packages__lesson-fake"></span>
                                             <span class="packages__lesson-text">60 минут</span>
                                         </label>
@@ -610,10 +610,22 @@
                         </div>
                     </div>
 
+
+
                 </div>
             </div>
         </div>
     </section>
+
+    <!-- <div class="packages__content-item-cards">
+        <div class="packages-card" style="background-image: url(images/default-images/card-bg-1.png);">
+            <div class="packages-card__wrapper">
+                <div class="packages-card__time">4 занятия по 30 мин</div>
+                <div class="packages-card__price">3400 ₽ </div>
+                <button type="submit" class="packages-card__btn btn">Выбрать</button>
+            </div>
+        </div>
+    </div> -->
 
     <!-- TRIAL-LESSON -->
     <section class="trial-lesson section-outer">
