refactoring js for 'packages' section

--- a/app/adult-education.html
+++ b/app/adult-education.html
@@ -536,7 +536,10 @@
                     <div class="packages__content-item">
                         <div class="packages__content-item__box">
                             <div class="packages__content-item-circle"></div>
-                            <div class="packages__content-item-title">Вид обучения</div>
+                            <div class="packages__content-item-title">
+                                Вид обучения <br>
+                                <span class="packages__content-item-title--view-teaching"></span>
+                            </div>
                         </div>
                         <div class="packages__content-item-dropdown">
                             <div class="packages__content-item-dropdown-box">
@@ -559,7 +562,10 @@
                     <div class="packages__content-item">
                         <div class="packages__content-item__box">
                             <div class="packages__content-item-circle"></div>
-                            <div class="packages__content-item-title">Вид занятия</div>
+                            <div class="packages__content-item-title">
+                                Вид занятия <br>
+                                <span class="packages__content-item-title--view-training"></span>
+                            </div>
                         </div>
                         <div class="packages__content-item-dropdown">
                             <div class="packages__content-item-dropdown-box">
@@ -587,7 +593,10 @@
                     <div class="packages__content-item">
                         <div class="packages__content-item__box">
                             <div class="packages__content-item-circle"></div>
-                            <div class="packages__content-item-title">Длительность</div>
+                            <div class="packages__content-item-title">
+                                Длительность <br>
+                                <span class="packages__content-item-title--view-duration"></span>
+                            </div>
                         </div>
                         <div class="packages__content-item-dropdown">
                             <div class="packages__content-item-dropdown-box">
