new version js for section 'packages'

--- a/app/adult-education.html
+++ b/app/adult-education.html
@@ -533,7 +533,7 @@
                 </div>
                 <div class="packages__content">
 
-                    <div class="packages__content-item">
+                    <div class="packages__content-item packages__content-item--active">
                         <div class="packages__content-item__box">
                             <div class="packages__content-item-circle"></div>
                             <div class="packages__content-item-title">
