added cards for section 'packages'

--- a/app/adult-education.html
+++ b/app/adult-education.html
@@ -618,23 +618,33 @@
                             </div>
                         </div>
                     </div>
-
-
-
+                </div>
+                <div class="packages__content-item-cards">
+                    <div class="packages-card" style="background-image: url(images/default-images/card-bg-1.png);">
+                        <div class="packages-card__wrapper">
+                            <div class="packages-card__time"></div>
+                            <div class="packages-card__price"></div>
+                            <button type="submit" class="packages-card__btn btn">Выбрать</button>
+                        </div>
+                    </div>
+                    <div class="packages-card" style="background-image: url(images/default-images/card-bg-2.png);">
+                        <div class="packages-card__wrapper">
+                            <div class="packages-card__time"></div>
+                            <div class="packages-card__price"></div>
+                            <button type="submit" class="packages-card__btn btn">Выбрать</button>
+                        </div>
+                    </div>
+                    <div class="packages-card" style="background-image: url(images/default-images/card-bg-3.png);">
+                        <div class="packages-card__wrapper">
+                            <div class="packages-card__time">1</div>
+                            <div class="packages-card__price"></div>
+                            <button type="submit" class="packages-card__btn btn">Выбрать</button>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
     </section>
-
-    <!-- <div class="packages__content-item-cards">
-        <div class="packages-card" style="background-image: url(images/default-images/card-bg-1.png);">
-            <div class="packages-card__wrapper">
-                <div class="packages-card__time">4 занятия по 30 мин</div>
-                <div class="packages-card__price">3400 ₽ </div>
-                <button type="submit" class="packages-card__btn btn">Выбрать</button>
-            </div>
-        </div>
-    </div> -->
 
     <!-- TRIAL-LESSON -->
     <section class="trial-lesson section-outer">
