refactoring section 'packages'

--- a/app/adult-education.html
+++ b/app/adult-education.html
@@ -532,7 +532,6 @@
                     <div class="packages__top-text">Выбирайте удобный формат встреч </div>
                 </div>
                 <div class="packages__content">
-
                     <div class="packages__content-item packages__content-item--active">
                         <div class="packages__content-item__box">
                             <div class="packages__content-item-circle"></div>
@@ -558,7 +557,6 @@
                             </div>
                         </div>
                     </div>
-
                     <div class="packages__content-item">
                         <div class="packages__content-item__box">
                             <div class="packages__content-item-circle"></div>
@@ -589,7 +587,6 @@
                             </div>
                         </div>
                     </div>
-
                     <div class="packages__content-item">
                         <div class="packages__content-item__box">
                             <div class="packages__content-item-circle"></div>
@@ -636,7 +633,7 @@
                     </div>
                     <div class="packages-card" style="background-image: url(images/default-images/card-bg-3.png);">
                         <div class="packages-card__wrapper">
-                            <div class="packages-card__time">1</div>
+                            <div class="packages-card__time"></div>
                             <div class="packages-card__price"></div>
                             <button type="submit" class="packages-card__btn btn">Выбрать</button>
                         </div>
