final version section 'packages'

--- a/app/adult-education.html
+++ b/app/adult-education.html
@@ -532,7 +532,7 @@
                     <div class="packages__top-text">Выбирайте удобный формат встреч </div>
                 </div>
                 <div class="packages__content">
-                    <div class="packages__content-item packages__content-item--active">
+                    <div class="packages__content-item packages__content-item--training packages__content-item--active">
                         <div class="packages__content-item__box">
                             <div class="packages__content-item-circle"></div>
                             <div class="packages__content-item-title">
@@ -557,7 +557,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="packages__content-item">
+                    <div class="packages__content-item packages__content-item--teaching">
                         <div class="packages__content-item__box">
                             <div class="packages__content-item-circle"></div>
                             <div class="packages__content-item-title">
@@ -587,7 +587,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="packages__content-item">
+                    <div class="packages__content-item packages__content-item--durability">
                         <div class="packages__content-item__box">
                             <div class="packages__content-item-circle"></div>
                             <div class="packages__content-item-title">
